--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ header {
   align-items: center;
   color: #6070ff;
   text-align: center;
-  font-family: 'Poppins';
+  font-family: "Poppins", sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 700;
@@ -50,8 +50,8 @@ header {
 }
 
 .greeting {
-  color:#172b4d;
-  font-family: 'Poppins';
+  color: #172b4d;
+  font-family: "Poppins", sans-serif;
   font-size: 40px;
   font-style: normal;
   font-weight: 700;
@@ -60,7 +60,7 @@ header {
 
 .job-description {
   color: #344563;
-  font-family: 'Poppins';
+  font-family: "Poppins", sans-serif;
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
@@ -69,7 +69,7 @@ header {
 
 .connect-link {
   color: #7f8cff;
-  font-family: 'Poppins';
+  font-family: "Poppins", sans-serif;
   font-size: 16px;
   font-style: normal;
   font-weight: 500;
