--- a/style.css
+++ b/style.css
@@ -102,19 +102,15 @@ header {
 }
 
 .button {
-  color: #396df2;
-  text-align: center; 
-  font-size: 17px;
-  font-style: normal;
+  background-color: #fff;
+  border: 1px solid #6070ff;
+  border-radius: 8px;
+  padding: 12px;
   font-weight: 500;
-  line-height: 24px; /* 141.176% */
-  letter-spacing: 0.51px; 
-  display: flex;
-padding: 12px;
-align-items: center;
-gap: 10px;
-border-radius: 8px;
-border: 1px solid var(--primary-b-400, #6070FF);
+  font-size: 17px;
+  line-height: 24px;
+  font-style: normal;
+  color: #396df2;
 }
 
 .snapshoot-portfolio {
@@ -169,3 +165,121 @@ border: 1px solid var(--primary-b-400, #6070FF);
   text-decoration: none;
 }
 
+.subject-pictures {
+  display: flex;
+  gap: 8px;
+}
+
+.subjects {
+  display: flex;
+  padding: 4px 12px;
+  align-items: center;
+  border-radius: 8px;
+  background: var(--primary-b-50, #EBEBFF);
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 16px;
+  color: #6070FF;
+  text-decoration: none;
+}
+
+.see-project-button {
+  margin-top: 12px;
+  margin-bottom: 12px;
+}
+
+.see-project,
+.get-my-resume {
+  background-color: #fff;
+  border: 1px solid #6070ff;
+  border-radius: 8px;
+  padding: 12px;
+  font-weight: 500;
+  font-size: 17px;
+  font-style: normal;
+  color: #396df2;
+}
+
+.about-me-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  padding: 114px 24px;
+  gap: 24px;
+}
+
+.about-me-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 12px;
+}
+
+.languages,
+.frameworks,
+.skills {
+  display: flex;
+  justify-content: space-between;
+  padding: 16px 26px 16px 12px;
+  align-items: center;
+  gap: 12px;
+}
+
+.languages p,
+.frameworks p,
+.skills p {
+  width: 237px;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px;
+}
+
+.language-list {
+  display: flex;
+  padding: 12px;
+  flex-direction: column;
+  align-items: center;
+  gap: 12px;
+}
+
+.js-section,
+.html-section, 
+.css-section {
+  display: flex;
+  width: 303px;
+  padding: 9px 12px 9.716px 12px;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 16px;
+  border-radius: 8px;
+  background: #f7f7f9; 
+}
+
+.js-icon,
+.html-icon,
+.css-icon {
+  width: 48px;
+  height: 48px;
+  flex-shrink: 0;
+  border-radius: 48px;
+  border: 1px solid #fff; 
+}
+
+.frameworks,
+.skills {
+  border-bottom: 1px solid #dfe1e6;
+}
+
+.js-section p,
+.html-section p,
+.css-section p {
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 20px;
+  color: #253858;
+}
