--- a/style.css
+++ b/style.css
@@ -277,7 +277,7 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
-    height: 48.6875rem; 
+    height: 48.6875rem;
     background-color: #6070ff;
     gap: 0.50rem;
   }
@@ -367,17 +367,17 @@
     display: flex;
     width: 100%;
     height: 4.5rem;
-    padding: 1rem 8.94rem; 
+    padding: 1rem 8.94rem;
     justify-content: space-between;
   }
 
   .logo {
     width: 6.25rem;
     height: 2.5rem;
-    padding: 0.625rem 0.75rem; 
+    padding: 0.625rem 0.75rem;
     color: #6070ff;
     text-align: center;
-    font-size: 1.125rem; 
+    font-size: 1.125rem;
     font-style: normal;
     font-weight: 700;
     line-height: 1.25rem;
@@ -409,18 +409,18 @@
     background-position: center;
     background-repeat: no-repeat;
     display: flex;
-    padding: 18.0625rem 16.25rem; 
+    padding: 18.0625rem 16.25rem;
     flex-direction: column;
     gap: 0.75rem;
   }
 
-  .greeting { 
+  .greeting {
     color: #172b4d;
     font-size: 3rem;
     font-style: normal;
     font-weight: 700;
     line-height: 3.75rem; /* 125% */
-    letter-spacing: 0.02313rem; 
+    letter-spacing: 0.02313rem;
   }
 
   .job-description {
@@ -436,14 +436,14 @@
     font-size: 1rem;
     font-style: normal;
     font-weight: 500;
-    line-height: 1.5rem; 
+    line-height: 1.5rem;
   }
 
   .social-media-links {
     display: flex;
     gap: 20px;
     width: 10.63544rem;
-    height: 1.25rem; 
+    height: 1.25rem;
     margin-top: 0.13rem;
   }
 
@@ -461,7 +461,7 @@
   .work-card {
     width: 72.25rem;
     height: 31rem;
-    display: flex;;
+    display: flex;
     padding: 1.5rem;
     border-radius: 1.5rem;
     border: 1px solid #dfe1d6;
@@ -494,7 +494,7 @@
   .snapshoot-portfolio {
     border-radius: 1.5rem;
     width: 34rem;
-    height: 28rem; 
+    height: 28rem;
   }
 
   .title {
@@ -656,7 +656,7 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
-    height: 52.875rem; 
+    height: 52.875rem;
     background-color: #6070ff;
     gap: 0.75rem;
   }
@@ -704,7 +704,7 @@
     font-weight: 400;
     line-height: 1.25rem;
     width: 27.9375rem;
-    height: 3rem; 
+    height: 3rem;
     border-radius: 8px;
     border: 1px solid #cfd8dc;
     background: #fff;
@@ -717,7 +717,7 @@
     font-weight: 400;
     line-height: 24px;
     width: 27.9375rem;
-    height: 10.625rem; 
+    height: 10.625rem;
     flex-shrink: 0;
     border-radius: 8px;
     border: 1px solid #cfd8dc;
