--- a/style.css
+++ b/style.css
@@ -23,6 +23,11 @@
   font-style: normal;
   font-weight: 700;
   line-height: 1.25rem;
+  transition: all 1s ease-in-out;
+}
+
+.logo:hover {
+  transform: rotate(180deg);
 }
 
 .nav-links-container {
@@ -136,6 +141,11 @@
   border-radius: 8px;
   width: 18.438rem;
   height: 13.75rem;
+  transition: all 0.6s ease;
+}
+
+.snapshoot-portfolio:hover {
+  transform: scale(1.02);
 }
 
 .title {
