--- a/style.css
+++ b/style.css
@@ -46,12 +46,12 @@
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
-  padding: 7.125rem 1.5rem;
+  padding: 20% 10%;
   flex-direction: column;
   text-align: start;
   gap: 0.75rem;
   width: 100%;
-  height: 604px;
+  height: auto;
 }
 
 .greeting {
@@ -408,8 +408,7 @@ form button {
   }
 
   .hero {
-    padding-left: 16.25rem;
-padding-right: 16.25rem;
+    padding: 10% 20%;
   }
 
   .work-card {
@@ -449,7 +448,7 @@ padding-right: 16.25rem;
     flex-direction: row;
     justify-content: space-between;
     /* align-items: flex-start; */
-    padding: 9rem;
+    padding: 10% 15%;
     gap: 1.5rem;
   }
 
@@ -464,6 +463,7 @@ padding-right: 16.25rem;
     justify-content: flex-start;
     align-items: flex-start;
     gap: 1rem;
+    width: 80%;
   }
 
   .languages,
