--- a/style.css
+++ b/style.css
@@ -425,11 +425,12 @@ form button {
 
   .hero {
     background-image: url(./images/Header\ bg@2x.png);
-    background-size: cover;
+    background-size: contain;
+    background-repeat: no-repeat;
     background-color: #fff;
     border-bottom-left-radius: 10rem;
     gap: 0.75rem;
-    padding: 18% 26%; 
+    padding: 15% 26% 18% 26%; 
     width: 100%;
     height: auto;
   }
